# pycasino

./: .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  backflow.py  casino.py  casino.sh  coulomb.py  cusp.py  decorators.py  dmc.py  gaussian.py  gjastrow.py  gwfn.py  harmonics.py  jastrow.py  logger.py  markovchain.py  mo.py  mo_cusp.py  numpy_config.py  optimize.py  overload.py  plot.py  profiling.py  profiling_multiprocess.py  pyproject.toml  random_steps.py  readme.md  requirements.txt  sem.py  setup.py  slater.py  spherical_harmonics.py  (+3 more)
.claude/skills/numba/: SKILL.md
.claude/skills/profiling/: SKILL.md
.claude/skills/qmc/: SKILL.md
.github/workflows/: tests.yml
acetaldehyde/HF/cc-pVQZ/: mol.molden
acetic/HF/cc-pVQZ/: mol.molden
be/HF/cc-pVQZ/: gwfn.data
casino/: __init__.py  abstract.py  backflow.py  backflow_structref.py  chemist.py  cusp.py  cusp_structref.py  dmc.py  gjastrow.py  harmonics.py  harmonics_new.py  hartreefock.py  jastrow.py  jastrow_class.py  jastrow_structref.py  loggers.py  markovchain.py  markovchain_class.py  markovchain_structref.py  mpi.py  overload.py  ppotential.py  ppotential_class.py  profiling.py  pycasino.py  sem.py  slater.py  slater_class.py  slater_structref.py  sphericart.py  vmc.py  wfn.py  wfn_class.py  wfn_structref.py
casino/mpi/: __init__.py  header.py  mpi.py
casino/readers/: __init__.py  backflow.py  casino.py  gjastrow.py  inp.py  input.py  jastrow.py  mdet.py  orca_pp2casino.py  ppotential.py  wfn.py
casino/tests/: test_backflow.py  test_cusp.py  test_cusp_factory.py  test_harmonics.py  test_jastrow.py  test_ppotential.py  test_slater.py
cusp/: cusp.py  mo.py  slater.py
docs/: CHANGELOG  requirements.txt
docs/source/: CHANGELOG  changelog.rst  conf.py  index.rst  installation.rst  parallel.rst  quickstart.rst  tutorial.rst
docs/source/_static/: custom.css
docs/source/tutorial/: backflow.rst  config.rst  cusp.rst  jastrow.rst  slater.rst  wfn.rst
examples/: casino.sh
examples/gwfn/: READ.ME  time.sh
examples/jastrow/3_0/22/: correlation.data
examples/jastrow/3_0/41/: correlation.data
examples/jastrow/3_0/53/: correlation.data
examples/jastrow/3_1/12/: correlation.data  correlation.out.1
examples/jastrow/3_1/13/: correlation.out.0
examples/jastrow/3_1/15/: correlation.out.0
examples/jastrow/3_1/21/: correlation.out.1  out
examples/jastrow/3_1/22/: correlation.out.0
examples/jastrow/3_1/25/: correlation.out.0
examples/jastrow/3_1/32/: correlation.out.1
examples/jastrow/3_1/35/: correlation.data
examples/jastrow/3_1/41/: correlation.data
examples/jastrow/3_1/43/: correlation.out.1
examples/jastrow/3_1/51/: correlation.out.0
examples/jastrow/3_1/52/: correlation.out.1
examples/jastrow/3_1/53/: correlation.out.0
examples/jastrow/3_1/54/: correlation.out.1
examples/jastrow/3_2/14/: correlation.data
examples/jastrow/3_2/32/: correlation.data
examples/jastrow/3_2/34/: correlation.data
examples/jastrow/3_2/35/: correlation.data
examples/jastrow/3_2/55/: correlation.data
examples/ppotential_HF/: READ.ME
examples/stowfn/: READ.ME  time.sh
pycasino/: __init__.py  abstract.py  backflow.py  casino.py  config.py  cusp.py  gjastrow.py  harmonics.py  jastrow.py  logger.py  markovchain.py  numpy_config.py  overload.py  profiling.py  sem.py  slater.py  wfn.py
pycasino/readers/: backflow.py  casino.py  gjastrow.py  input.py  jastrow.py  mdet.py  numerical.py  wfn.py
readers/: backflow.py  casino.py  gjastrow.py  gwfn.py  input.py  jastrow.py  mdet.py  numerical.py  wfn.py
sympy_utils/: ae_cutoffs_derivatives.py  backflow_derivatives.py  gaussian_derivatives.py  jastrow_derivatives.py  mo_cusp_derivatives.py  slater_derivatives.py  slater_determinant.py  spherical_harmonics.py
test/: READ.ME
test/acetaldehyde/HF/cc-pVQZ/: gwfn.data
test/be/B3LYP/cc-pVQZ/: gwfn.data
test/be/HF/cc-pVQZ/: mol.molden
test/gwfn/: READ.ME
test/h/B3LYP/cc-pVQZ/: gwfn.data
test/h/HF/cc-pVQZ/: gwfn.data  input
test/jastrow/3_0/15/: correlation.data
test/jastrow/3_0/21/: correlation.data
test/jastrow/3_0/23/: correlation.data
test/jastrow/3_0/31/: correlation.data
test/jastrow/3_0/33/: correlation.data
test/jastrow/3_0/51/: correlation.data
test/jastrow/3_1/11/: correlation.data  correlation.out.0
test/jastrow/3_1/12/: correlation.out.0  out
test/jastrow/3_1/13/: correlation.data  correlation.out.1
test/jastrow/3_1/14/: correlation.data  correlation.out.0  out
test/jastrow/3_1/15/: correlation.data
test/jastrow/3_1/21/: correlation.data  correlation.out.0
test/jastrow/3_1/22/: correlation.data  out
test/jastrow/3_1/23/: correlation.out.0  correlation.out.1
test/jastrow/3_1/24/: out
test/jastrow/3_1/25/: correlation.out.1  out
test/jastrow/3_1/31/: correlation.out.0  correlation.out.1  out
test/jastrow/3_1/32/: correlation.data  correlation.out.0
test/jastrow/3_1/33/: correlation.data  out
test/jastrow/3_1/34/: correlation.data  correlation.out.1  input  out
test/jastrow/3_1/35/: correlation.out.0  correlation.out.1
test/jastrow/3_1/41/: correlation.out.0  correlation.out.1  out
test/jastrow/3_1/42/: correlation.data  correlation.out.0  correlation.out.1
test/jastrow/3_1/44/: correlation.data  out
test/jastrow/3_1/45/: correlation.data  correlation.out.0  correlation.out.1  out
test/jastrow/3_1/51/: correlation.data
test/jastrow/3_1/52/: correlation.out.0  out
test/jastrow/3_1/54/: correlation.out.0
test/jastrow/3_1/55/: correlation.data  correlation.out.0  out
test/jastrow/3_2/11/: correlation.data
test/jastrow/3_2/13/: correlation.data
test/jastrow/3_2/42/: correlation.data
test/stowfn/: READ.ME
tests/: casino.sh  test_backflow.py  test_cusp.py  test_jastrow.py  test_ppotential.py  test_slater.py
tests/gwfn/: READ.ME  time.sh
tests/jastrow/3_1/11/: out  (+1 more)
tests/ppotential/: READ.ME
tests/ppotential_DF/: READ.ME
tests/ppotential_HF/: READ.ME
tests/profiling/: profiling_v1  profiling_v2
tests/stowfn/: READ.ME  time.sh
(+2449 files in other folders)
