[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'pycasino'
version = '0.2.0'
description = 'Quantum Monte Carlo for electrons in real space'
authors = [
    {name = "Vladmir Konkov", email = "Konjkov.VV@gmail.com"},
]
maintainers = [
    {name = "Vladmir Konkov", email = "Konjkov.VV@gmail.com"},
]
readme = "README.md"
license = {text = 'MIT'}
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = ">=3.10"
# https://scientific-python.org/specs/spec-0000/
dependencies = [
    'numba>=0.59.0',
    'mpi4py>=3.1.0',
    'pyblock>=0.6.0',
    'numpy>=1.24.0',
    'scipy>=1.10.0',
    'sympy>=1.12.0',
    # 'icc-rt',  # Intel(R) Compiler Runtime
    # 'tbb',  # threading layer backed by Intel TBB
    # 'pyyaml>=6.0.0',  # for gjastrow reader
    'matplotlib>=3.6.0',
    'pandas>=2.0.2'   # for pyblock
]

[project.urls]
repository = 'https://github.com/Konjkov/pycasino'
documentation = 'https://konjkov.github.io/pycasino.github.io/'

[project.scripts]
pycasino = 'casino.pycasino:main'

[tool.setuptools]
packages = ["casino", "casino.readers"]

[tool.ruff]
src = ["casino"]
line-length = 150
respect-gitignore = true

[tool.ruff.lint]
ignore = [
    "E741"  # ambiguous-variable-name
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"
exclude = [
    "pycasino.py", "backflow.py", "jastrow.py"
]
