[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'casino'
version = '0.4.0'
description = 'Quantum Monte Carlo for electrons in real space'
authors = [
    {name = "Vladimir Konkov", email = "Konjkov.VV@gmail.com"},
]
maintainers = [
    {name = "Vladimir Konkov", email = "Konjkov.VV@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.9,<3.13"
# https://scientific-python.org/specs/spec-0000/
dependencies = [
    'numba>=0.61.0',
    'mpi4py>=3.1.0',
    'pyblock>=0.6.0',
    'numpy>=2.0.0',
    'scipy>=1.10.0',
    'sphericart>=1.0.0',
    'pyyaml>=6.0.0',  # for gjastrow reader
    'matplotlib>=3.6.0',
    'pandas>=2.3.0',   # for pyblock
    'statsmodels==0.14.4',
]
[project.optional-dependencies]
dev = [
#    'sympy>=1.12.0',
#    'isort',
#    'icc-rt',  # Intel(R) Compiler Runtime
#    'tbb',  # threading layer backed by Intel TBB
#    'opt_einsum>=3.3.0',
    'pytest>=8.4.0',
]
doc = [
    'sphinx',
    'Jinja2',
    'toml',
]

[project.urls]
repository = 'https://github.com/Konjkov/pycasino'
documentation = 'https://konjkov.github.io/pycasino.github.io/'

[project.scripts]
chemist = 'casino.chemist:main'
pycasino = 'casino.pycasino:main'

[tool.setuptools]
packages = ["casino", "casino.readers", "casino.tests"]

[tool.setuptools.data-files]
"casino.tests" = ["inputs/*/*"]

[tool.ruff]
src = ["casino"]
line-length = 150
respect-gitignore = true

[tool.ruff.lint]
ignore = [
    "E741"  # ambiguous-variable-name
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"
exclude = [
    "pycasino.py"
]
